# ai-news-rag

./: .gitignore  docker-compose.yml  pyproject.toml
app/: main.py  settings.py
app/database/: __init__.py  config.py  database.py  models.py  types.py
app/services/: chunk.py  fetchdata.py  modelprovider.py  processdata.py  query.py  rag.py  search.py  summary.py
app/utils/: text.py  token.py
migrations/: env.py
migrations/versions/: 033a4779f3b4_add_vector_extension.py  03d330adfb6e_add_published_at_column.py  0d0867707a4c_initial_migration.py  11da7b4790f8_add_golden_table.py  15a9850fcfdf_add_vectorized_flag.py  367221323446_add_scores_to_golden_table.py  53d32dcc07ab_add_title_to_sources.py  6876a50bd48e_add_summarization_fields.py  a5276d4967cb_make_title_and_body_nullable.py  b2ce0e8d9e50_add_source_chunk_table.py  e0b9ed405fac_merge_heads.py  f24653294234_add_silver_table_processed_sources.py
