[project]
name = "rag"
version = "0.1.0"
description = "rag"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "dotenv>=0.9.9",
    "fastapi>=0.135.3",
    "feedparser>=6.0.12",
    "httpx>=0.28.1",
    "huggingface-hub>=1.11.0",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.2.0",
    "openai>=2.31.0",
    "pgvector>=0.4.2",
    "psycopg2>=2.9.11",
    "psycopg[binary]>=3.3.3",
    "pydantic>=2.12.5",
    "sqlalchemy>=2.0.49",
    "tiktoken>=0.12.0",
    "trafilatura>=2.0.0",
    "uvicorn>=0.44.0",
]
